Fix horizontal scrollbar around 1170px width
It turns out actually the fast expand sections are under 950px width
now, it's just the rest of the layout was getting squished below that
sometimes.

--- a/html/styles/global.css
+++ b/html/styles/global.css
@@ -414,7 +414,20 @@ label {
 		overflow-y: auto;
 	}
     #content.has-toc {
-        margin-left: 210px;
+        margin-left: auto;
+        margin-right: 0;
+    }
+    @media (min-width: 1190px) {
+        #content.has-toc {
+            margin-left: 210px;
+            margin-right: auto;
+        }
+    }
+    @media (min-width: 1400px) {
+        #content.has-toc {
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
     #content.has-toc #links {
         display: none;
@@ -427,10 +440,4 @@ label {
 		border: 0;
 		background: transparent;
 	}
-
-    @media (min-width: 1370px) {
-        #content.has-toc {
-            margin-left: auto;
-        }
-    }
 }
